--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  url_launcher: ^6.0.10
+  http: ^1.2.2
+  archive: ^3.6.1
+  path_provider: ^2.0.14
+  get: ^4.6.6
+  dio: ^5.6.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
